fix overflow for closed chat

--- a/packages/client/components/ui/InstanceChat/InstanceChat.module.scss
+++ b/packages/client/components/ui/InstanceChat/InstanceChat.module.scss
@@ -28,6 +28,7 @@
 
   &.messageContainerClosed{
     width: 0;
+    overflow: hidden;
   }
 
   @media (max-width: 768px) {
